16885
Given src/main/scala/pack/age/Foo.scala:{{hello}}
{code}
package pack.age

class Baz 

object Implicits  {
	implicit def Baz(n: Int): Baz = new Baz
}
{code}
and src/main/scala/pack/age/Bar.scala:
{code}
package pack.age

import pack.age.Implicits._

object Quux {
	def baz : Baz   = 1
}
{code}

When first run, {{scalac src/main/scala/pack/age/Foo.scala src/main/scala/pack/age/Bar.scala}} compiles both fine, and places the class files in the {{pack}} directory.

However, if rerun, {{scalac src/main/scala/pack/age/Foo.scala src/main/scala/pack/age/Bar.scala}} fails with the following error:

{code}
src/main/scala/pack/age/Bar.scala:6: error: type mismatch;
found   : Int(1)
required: pack.age.Baz
 def baz : Baz   = 1
									 ^
one error found
{code}

This is a simplification of the bug reported in a stackoverflow question (http://stackoverflow.com/questions/9959199/error-in-scala-maven-recompilation-without-code-change).  All the above code can be downloaded from github (https://github.com/rampion/scalac-compile-bug).
